# idcamp-intermediate

./: README.md  jenius_sentiment_analysis.ipynb  pyproject.toml  requirements.txt
data/: jenius_reviews.csv  predictions.csv  test.csv  train.csv
data/experiments/: exp1_A_predictions.csv  exp1_A_test.csv  exp1_A_train.csv  exp1_B_predictions.csv  exp1_B_test.csv  exp1_B_train.csv  exp1_predictions.csv  exp1_test.csv  exp1_train.csv  exp2_A_predictions.csv  exp2_A_test.csv  exp2_A_train.csv  exp2_B_predictions.csv  exp2_B_test.csv  exp2_predictions.csv  exp2_test.csv  exp2_train.csv  exp3_A_predictions.csv  exp3_A_test.csv  exp3_A_train.csv  exp3_B_predictions.csv  exp3_B_test.csv  exp3_B_train.csv  exp3_kfold_predictions.csv
scripts/: scrape_jenius_reviews.py
