[project]
name = "idcamp-intermediate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-play-scraper>=1.2.7",
    "nltk>=3.9.3",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.21.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "uv>=0.10.10",
]
