[project]
name = "idcamp-intermediate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-play-scraper>=1.2.7",
    "matplotlib>=3.10.8",
    "nltk>=3.9.3",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
    "wordcloud>=1.9.6",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "uv>=0.10.10",
]
